feat: Subsets (78), ShuffleTheArray (1470) and ConvertBinarySearchTreeToSortedDoublyLinkedList (426) solutions.